--- a/src/html/prerequisites.html
+++ b/src/html/prerequisites.html
@@ -102,6 +102,9 @@
                     </tbody>
                 </table>
             </div>
+            <div class="alert close-app" id="willCloseApp">
+                The installer will close when the prerequisites have been installed.
+            </div>
         </div>
         <div class="space"></div>
         <button id='back' class="back-button">Back</button>
