--- a/src/html/summary.html
+++ b/src/html/summary.html
@@ -1,65 +1,65 @@
 <!doctype html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../../assets/css/normalize.css" />
-    <link rel="stylesheet" href="../../assets/css/skeleton.css" />
-    <link rel="stylesheet" href="../../assets/css/installer.css" />
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="../../assets/css/normalize.css" />
+  <link rel="stylesheet" href="../../assets/css/skeleton.css" />
+  <link rel="stylesheet" href="../../assets/css/installer.css" />
 </head>
+
 <body>
 <header class="header">
-    <h4>Summary</h4>
+  <h4>Summary</h4>
 </header>
 
 <div class="wrapper" id="hats-body">
-    <div id="challenge-sidebar" class="three columns sidebar">
-        <ul class="list-of-challenges">
-            <div class="installation-steps">
-                <h6>Installation Steps</h6>
-            </div>
-            <li>
-                <div id="welcome" data-id="0" class="hats-steps completed">
-                    <div class="circle">1</div>
-                    <h6>Welcome</h6>
-                </div>
-            </li>
-            <li>
-                <div id="prerequisites" data-id="1" class="hats-steps completed">
-                    <div class="circle">2</div>
-                    <div class="current-arrow"></div>
-                    <h6>Prerequisites</h6>
-                </div>
-            </li>
-            <li>
-                <div id="installation" data-id="2" class="hats-steps completed">
-                    <div class="circle">3</div>
-                    <h6>Installation</h6>
-                </div>
-            </li>
-            <li>
-                <div id="summary" data-id="3" class="hats-steps current">
-                    <div class="circle">4</div>
-                    <h6>Summary</h6>
-                </div>
-            </li>
-        </ul>
-    </div>
-
-
-    <div class="nine columns content">
-        <div class="container main-content">
-            <p>Thank you for installing <i>hats</i>! To validate that the installation is
-                successful, click on the "Test" button. </p>
-
-
-            <div class="halfspace"></div>
-            <button class="test-button button-standard" id='test'>Test</button>
-            <button class="exit-button-summary" id='exit'>Exit</button>
-            <div class="info" id="testInProgMsg">
-            </div>
+  <div id="challenge-sidebar" class="three columns sidebar">
+    <ul class="list-of-challenges">
+      <div class="installation-steps">
+        <h6>Installation Steps</h6>
+      </div>
+      <li>
+        <div id="welcome" data-id="0" class="hats-steps completed">
+          <div class="circle">1</div>
+          <h6>Welcome</h6>
         </div>
+      </li>
+      <li>
+        <div id="prerequisites" data-id="1" class="hats-steps completed">
+          <div class="circle">2</div>
+          <div class="current-arrow"></div>
+          <h6>Prerequisites</h6>
+        </div>
+      </li>
+      <li>
+        <div id="installation" data-id="2" class="hats-steps completed">
+          <div class="circle">3</div>
+          <h6>Installation</h6>
+        </div>
+      </li>
+      <li>
+        <div id="summary" data-id="3" class="hats-steps current">
+          <div class="circle">4</div>
+          <h6>Summary</h6>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+  <div class="nine columns content">
+    <div class="container main-content">
+      <p>Thank you for installing <i>hats</i>! To validate that the installation is successful, click on the "Test" button. </p>
+
+      <div class="halfspace"></div>
+      <button class="test-button button-standard" id='test'>Test</button>
+      <button class="exit-button-summary" id='exit'>Exit</button>
+      <div class="info" id="testInProgMsg">
+      </div>
     </div>
-    <script type="text/javascript" src="../js/summary.js"></script>
+  </div>
+</div>
+<script type="text/javascript" src="../js/summary.js"></script>
 </body>
 
 </html>
