--- a/src/html/prerequisites.html
+++ b/src/html/prerequisites.html
@@ -105,6 +105,7 @@
         </table>
       </div>
       <div class="alert close-app" id="willCloseApp">
+        It might take a while for the prerequisites to be installed.
         The installer will close when the prerequisites have been installed.
       </div>
     </div>
