--- a/src/html/summary.html
+++ b/src/html/summary.html
@@ -49,8 +49,9 @@
 
   <div class="nine columns content">
     <div class="container main-content">
-      <p>Thank you for installing <i>hats</i>! To validate that the installation is successful, click on the "Test" button. </p>
-
+      <p>To validate that the installation is successful, click on the "Test" button. </p>
+      <p>A sample test script will be executed and the test results will appear shortly. You should see the test report summary page at the end of the test if the installation has been successful. </p>
+      <p>Contact us at <a href="mailto:hats.supp@gmail.com" target="_top">hats.supp@gmail.com</a> for any inquiries or issues.</p>
       <div class="halfspace"></div>
       <button class="test-button button-standard" id='test'>Test</button>
       <button class="exit-button-summary" id='exit'>Exit</button>
